--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@ai-sdk/google": "^2.0.23",
     "@ai-sdk/openai": "^2.0.53",
     "@hookform/resolvers": "^5.2.2",
+    "@polar-sh/better-auth": "^1.1.11",
+    "@polar-sh/sdk": "^0.38.1",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -49,7 +51,7 @@
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
     "ai": "^5.0.78",
-    "better-auth": "^1.3.27",
+    "better-auth": "^1.3.29",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -61,9 +63,11 @@
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
     "next-themes": "^0.4.6",
+    "random-word-slugs": "^0.1.7",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.65.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
