--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@ai-sdk/google": "^2.0.23",
     "@ai-sdk/openai": "^2.0.53",
     "@hookform/resolvers": "^5.2.2",
+    "@paralleldrive/cuid2": "^3.0.4",
     "@polar-sh/better-auth": "^1.1.11",
     "@polar-sh/sdk": "^0.38.1",
-    "@prisma/client": "^6.17.1",
+    "@prisma/client": "^6.19.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -50,7 +51,7 @@
     "@trpc/client": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
-    "@xyflow/react": "^12.9.2",
+    "@xyflow/react": "^12.9.3",
     "ai": "^5.0.78",
     "better-auth": "^1.3.29",
     "class-variance-authority": "^0.7.1",
@@ -88,7 +89,7 @@
     "@types/react-dom": "^19",
     "inngest-cli": "^1.12.1",
     "mprocs": "^0.7.3",
-    "prisma": "^6.17.1",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
